Footer and Hidden Menu

--- a/website folder (IT37)/style.css
+++ b/website folder (IT37)/style.css
@@ -3,7 +3,9 @@
 background-repeat: no-repeat;
 background-size: cover;
 backdrop-filter: blur(3px) ;
-padding-top: 80px;  }
+padding-top: 80px; 
+overflow-x: hidden;
+ }
 
 .word {
     text-align: center;
@@ -16,4 +18,20 @@ padding-top: 80px;  }
     border-style: ridge;
     border-color: 	#f1efee;
     background-color: #86492f;
+}
+footer {
+    background-color: #b66736;
+    color: white;
+    padding: 20px 0;
+    text-align: center; /* Center the text in the footer */
+}
+
+.footer-links a {
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
 }
