--- a/website folder (IT37)/style.css
+++ b/website folder (IT37)/style.css
@@ -1,11 +1,12 @@
 .body{
-    background-image: url("/website folder (IT37)/pics/background.png");
+    background-color: #1A3636;
 background-repeat: no-repeat;
 background-size: cover;
 backdrop-filter: blur(3px) ;
-padding-top: 80px; 
+padding-top: 80px;  
 overflow-x: hidden;
- }
+}
+
 
 .word {
     text-align: center;
@@ -19,8 +20,23 @@ overflow-x: hidden;
     border-color: 	#f1efee;
     background-color: #86492f;
 }
+
+.navbar {
+    background-color: #1A3636;
+    /* Custom background color */
+}
+
+.navbar .nav-link {
+    color: #ffffff;
+    /* White text */
+}
+
+.navbar .nav-link:hover {
+    color: #ffc107;
+    /* Yellow on hover */   
+}
 footer {
-    background-color: #b66736;
+
     color: white;
     padding: 20px 0;
     text-align: center; /* Center the text in the footer */
