--- a/website folder (IT37)/style.css
+++ b/website folder (IT37)/style.css
@@ -15,15 +15,15 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Minimum height of the body to always cover the viewport */
+    min-height: 100vh; 
 }
 
-/* The main content will take up all available space */
+
 .container {
-    flex: 1; /* Ensures the container fills the space before the footer */
+    flex: 1; 
 }
 
-/* Footer styling */
+
 footer {
     background-color: #343a40;
     color: white;
@@ -34,17 +34,17 @@ footer {
 
 .navbar {
     background-color: #1A3636;
-    /* Custom background color */
+   
 }
 
 .navbar .nav-link {
     color: #ffffff;
-    /* White text */
+    /
 }
 
 .navbar .nav-link:hover {
     color: #302f2e;
-    /* Yellow on hover */   
+    
 }
 
 .footer-links {
@@ -55,17 +55,17 @@ footer {
 }
 
 .footer-link {
-    color: #fff; /* Adjust color to match your theme */
+    color: #fff; 
     text-decoration: none;
 }
 
 .footer-link:hover {
-    color: #ccc; /* Adjust hover color */
+    color: #ccc;
     text-decoration: underline;
 }
 
 footer {
-    background-color: #1A3636; /* Dark background color */
+    background-color: #1A3636; 
     padding: 20px 0;
     color: white;
 }
@@ -77,10 +77,10 @@ footer {
 
 .right-img {
     margin-top: 20px;
-    float: right; /* Aligns the image to the right */
-    width: 45.5%; /* You can adjust the width */
-    height: auto; /* Maintain aspect ratio */
-    margin-right: 30px; /* Adds space around the image */
+    float: right;
+    width: 45.5%; 
+    height: auto; 
+    margin-right: 30px; 
 }
 
 .word{
@@ -94,24 +94,23 @@ footer {
 }
 
 .navbar-toggler {
-    border: none; /* Remove default border */
+    border: none; 
 }
 
 .navbar-toggler-icon {
-    background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"%3E%3Cpath stroke="white" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E'); /* White icon */
+    background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"%3E%3Cpath stroke="white" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E'); 
     
 }
 
 .styled-hr {
-    height: 5px; /* Height of the line */
-    border: none; /* Remove the default border */
-    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(200, 200, 200, 1)); /* Gradient background */
-    border-radius: 10px; /* Rounded edges */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Shadow for depth */
-    margin: 20px 0; /* Space above and below the line */
+    height: 5px;
+    border: none; 
+    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(200, 200, 200, 1)); 
+    border-radius: 10px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); 
+    margin: 20px 0; 
 }
-
 .carousel {
-    max-width: 100%; /* Or any specific width */
-    margin: auto; /* Center the carousel */
+    max-width: 100%; 
+    margin: auto; 
 }
