--- a/website folder (IT37)/Home-page/style.css
+++ b/website folder (IT37)/Home-page/style.css
@@ -11,14 +11,6 @@ html, body {
     margin: 0;
     padding: 0;
 }
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
-}
-
-
 .container {
     flex: 1; 
 }
@@ -112,5 +104,10 @@ footer {
 }
 .carousel {
     max-width: 100%; 
-    margin: auto; 
+    margin: auto;
+}
+.carousel-item img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover; /* Ensures the image fills the space without distortion */
 }
