--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ footer {
 }
 .carousel-item img {
     width: 100%;
-    height: 600px;
-    object-fit: cover; /* Ensures the image fills the space without distortion */
+    height: 650px;
+    object-fit:unset    ; 
+    margin-top: 3rem;
+}
+.carousel-inner, .carousel-item {
+    height: 650px;          
+    overflow: hidden; 
 }
