--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ padding-top: 80px;
 overflow-x: hidden;
 }
 .second-background {
-margin-top: 5rem;
+margin-top: 8rem;
     background-color:   #fffdfb;
     color: white;
     padding: 50px 20px;
@@ -16,16 +16,6 @@ margin-top: 5rem;
     background-repeat: no-repeat;
     min-height: 13in;
 }
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-.container {
-    flex: 1; 
-}
-
-
 footer {
     background-color: #343a40;
     color: white;
@@ -149,6 +139,10 @@ footer {
     position: relative;
     z-index: 2; 
   }
+  .card-text{
+    margin-top: 30px;
+    text-align: left;
+  }
   .icon-row {
     display: flex;
     gap: 60px;
@@ -174,9 +168,12 @@ footer {
 }
 
   .icon-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 80px;  
+    height: 80px; 
+    border-radius: 40%;
+    object-fit: cover; 
+    display: block; 
+    margin: 0 auto;
   }
 
 .icon-name {
