--- a/About-us/about.css
+++ b/About-us/about.css
@@ -69,4 +69,8 @@ h1 {
 }
 .info {
     color: white;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 25px;
 }
